# Clinical_Data_Study_Buddy

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CDISC1-share-2.0-1.1.0-swagger.json  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REPO_HEALTH_ANALYSIS.md  SECURITY.md  TODO.md  adrg.docx  crf.json  docker-compose.yml  open_api_spec.json  pyproject.toml  sdrg.docx  sdtm_ae_20250822_215518.csv  sdtm_dm_20250822_215518.csv  sdtmig_3-3_spec.xlsx  setup.ps1  setup.sh  test_tfl_config.json  todo.md  todo_fix.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml  weekly-sync.yml
build_scripts/: diagram.py  read_excel.py  update_issue_links.py
cli/: openfda_cli.py
cli_output/: protocol.md
crfs/: AE_Adverse_Events_CRF.docx
data_standards/1_collection/: CDASHIG_v2.3.xlsx  CDASH_Model_v1.3.xlsx
data_standards/2_tabulation/: SDTMIG_v3.4.xlsx  SDTM_v2.0.xlsx
data_standards/3_analysis/: ADaMIG_v1.2.xlsx  ADaM_BDS_for_TTE_v1.0.xlsx  ADaM_OCCDS_v1.0.xlsx  ADaM_OCCDS_v1.1.xlsx  ADaM_popPK_v1.0.xlsx
data_standards/terminology/: ADaM_CT_2025-03-28.xlsx  CDASH_CT_2025-03-28.xlsx  SDTM_CT_2025-03-28.xlsx  SEND_CT_2025-03-28.xlsx
docs/: FAQ.md  REVIEWER_GUIDES.md  index.md  mkdocs.yml  openfda_devices.md
docs/user_guide/: quickstart.md  (+7 more)
examples/: crf_config.yaml  study_config.json
issues/: 00-epic-initial-codebase-refactoring.md  00.01-task-repository-restructuring.md  00.02-task-cli-refactoring.md  00.03-chore-enhance-ci-cd-pipeline.md  00.04-chore-refactor-remaining-scripts.md  01-repository-restructuring.md  02-cli-refactoring-generate-cdash-crf.md  02-task-cli-refactoring.md  03-chore-enhance-ci-cd-pipeline.md  03-enhance-ci-cd-pipeline.md  04-documentation-overhaul.md  04-epic-documentation-overhaul.md  05-chore-refactor-remaining-scripts.md  05-refactor-remaining-scripts.md  06-epic-migrate-legacy-todos.md  06.01-epic-transition-to-cdisc-api.md  06.01.01-task-replace-web-crawler.md  06.01.02-task-automate-standard-download.md  06.02-epic-enhance-crf-generation.md  06.02.01-task-refactor-crf-logic-for-api.md  06.03-epic-expand-synthetic-data-generation.md  06.03.01-task-enhance-synthetic-data-generator.md  06.04-chore-add-comprehensive-tests.md  06.05-theme-feature-expansion-clinical-data-generation.md  06.05.01-initiative-dataset-generation-ui.md  06.05.01.01-epic-core-dataset-generator.md  06.05.01.02-epic-ui-for-dataset-generation.md  06.05.01.03-epic-ui-for-generating-analysis-code.md  06.05.01.04-epic-ui-for-generating-cdash-crfs.md  06.05.01.05-epic-ui-for-generating-study-protocols.md  06.05.01.06-epic-ui-for-specification-management.md  06.05.01.07-epic-ui-for-generating-reviewers-guides.md  06.05.01.08-epic-ui-for-openfda-integration.md  06.05.02-initiative-document-template-generators.md  06.05.02.01-epic-generate-edc-raw-dataset-package.md  06.05.02.02-epic-generate-sas-reference-code.md  06.05.02.03-epic-generate-blank-crfs.md  06.05.02.04-epic-generate-tfl-shells.md  06.05.02.05-epic-generate-specification-templates.md  06.05.02.06-epic-generate-study-protocols.md  (+24 more)
output/: protocol.md
scripts/: build.py  build_canonical.py  diagram.py  generate_adrg.py  generate_analysis.py  generate_cdash_crf.py  generate_client.py  generate_dataset_from_spec.py  generate_raw_dataset_package.py  generate_sdrg.py  generate_spec_template.py  generate_synthetic_data.py  generate_tfl.py  populate_crf_from_fda.py  validate_dataset.py
src/: tfl_autonumber.py  tfl_migration.py  tfl_models.py
test_crfs/: AE_Adverse_Events_CRF.docx
tests/: test_analysis_generator.py  test_build_cli.py  test_crawl_fixture.py  test_crawl_live.py  test_csv_exporter.py  test_data_generator.py  test_docx_exporter.py  test_exporters.py  test_generate_cdash_crf.py  test_generate_cli.py  test_generate_documents.py  test_generate_raw_dataset_package.py  test_generate_synthetic_data.py  test_generation_service.py  test_generation_service_fixes.py  test_harvest.py  test_latex_exporter.py  test_legacy_cli.py  test_markdown_exporter.py  test_new_features.py  test_odm_exporter.py  test_openfda.py  test_openfda_client.py  test_protocol.py  test_readme.py  test_schema.py  test_schema_roundtrip.py  test_spec.py  test_standard_downloader.py  test_tfl_spec.py  test_ui.py  test_utils.py  test_xlsx_exporter.py
(+911 files in other folders)
